<resources>
    <string name="app_name">Workout Companion</string>
    <string name="creatorName">Farhad</string>
    <string name="homeButton">Go Home</string>
    <string name="welcomeMessage1">Good Morning! </string>
    <string name="welcomeMessage2">Good Afternoon! </string>
    <string name="welcomeMessage3">Good Evening! </string>
    <string name="weeklyTitle">Weekly Overview:</string>
    <string name="statWarning">Statistics are not stored until you sign in</string>
    <string name="homeWorkoutsTitle">💪 Workouts:</string>
    <string name="homeTimeTitle">⏱️ Time:</string>
    <string name="homeRepetitionsTitle">🏋️ Repetitions:</string>
    <string name="exercisesTitle">🥋 Exercises:</string>
    <string name="workoutStreakTitle">📈 Workout Streak:</string>
    <string name="experienceTitle">You do not have an account, please create one to view statistics.</string>
    <string name="homeHoursTitle">Hours</string>
    <string name="homeRepsTitle">Reps</string>
    <string name="homeCompletedTitle">Completed Workouts</string>
    <string name="exercisesCompletedTitle">Completed Exercises</string>


    <string name="welcomePage1Message">What\'s your gender?</string>
    <string name="welcomePage1Message2">Let\'s find out more about you</string>
    <string name="welcomePage2Message1"> Describe your activity level</string>
    <string name="welcomePage2Message2">How active are you?</string>
    <string name="welcomePage3Message1">What\'s your fitness level?</string>
    <string name="welcomePage3Message2">How many push ups can you do in a row?</string>
    <string name="continueButton">Continue</string>

    <string name="sedentary">👨‍💻 Sedentary</string>
    <string name="lightlyActive">🚶‍♂️ Lightly Active</string>
    <string name="moderatelyActive">🏃‍♂️ Moderately Active</string>
    <string name="veryActive">🤼‍♂️ Very Active</string>

    <string name="beginner">Beginner: 0 - 5 Push ups</string>
    <string name="intermediate">Intermediate: 5 - 20 Push ups</string>
    <string name="advanced">Advanced: 20 - 40 Push ups</string>
    <string name="elite">Elite: 40 Push ups+</string>

    <string name="basicWorkoutsTitle">Basic Workouts</string>
    <string name="premiumWorkoutsTitle">Premium Workouts</string>

    <string name="noPremiumStatus">You are not currently a Premium member.</string>
    <string name="premiumStatus">You are currently a Premium member.</string>

    <string name="guestName">Guest</string>
    <string name="defaultName">Name:</string>
    <string name="defaultBirth">Birth:</string>
    <string name="defaultEmail">Email:</string>
    <string name="signInTitle">Sign In</string>
    <string name="signOutTitle">Sign Out</string>
    <string name="noAccount">No account? Sign up instead.</string>

    <string name="signUpTitle">Sign Up</string>
    <string name="nameTitle">Name:</string>
    <string name="passTitle">Password:</string>
    <string name="emailTitle">Email:</string>
    <string name="birthdateTitle">Birth Date:</string>
    <string name="selectBirthDate">Select Birth Date</string>

    <string name="premiumTitle">Buy Premium</string>
    <string name="cardNum">Card Number</string>
    <string name="billingAddress">Billing Address</string>
    <string name="CVV">CVV</string>
    <string name="City">City</string>

</resources>