<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#313030">


    <TextView
        android:id="@+id/welcomeMessage1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/welcomePage1Message"
        android:textColor="#FDFDFD"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomePage1Message2"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="195dp"
        android:layout_height="404dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/yellow_man" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="177dp"
        android:layout_height="362dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/yellow_woman" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="184dp"
        android:layout_height="92dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="60dp"
        android:text="@string/continueButton"
        android:textColor="#FFFFFF"
        android:backgroundTint="#444343"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.625" />


</androidx.constraintlayout.widget.ConstraintLayout>